<resources>
    <string name="app_name">Firebase Email Auth</string>
    <string name="string_email">Email</string>
    <string name="string_pass">Password</string>
    <string name="welcome_back_to_firebase_auth">Welcome back to Firebase Auth</string>
    <string name="user_email">User email</string>
    <string name="verification_status">Verification status</string>
    <string name="log_out">Log out</string>
    <string name="verify">Verify</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_a_member_sign_in_here">Already a member? Sign in here</string>
    <string name="signup">SIGNUP</string>
</resources>
