<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:orientation="vertical"
    tools:context="patel.akshay.firebaseemailauth.SignUpActivity">


        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/string_email"
            />

        <EditText
            android:id="@+id/signup_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_pass"
            android:inputType="textPassword"
            />

        <TextView
            android:id="@+id/already_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_a_member_sign_in_here"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            />


    </LinearLayout>


