<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    android:gravity="center_horizontal"
    tools:context="patel.akshay.firebaseemailauth.ProfileActivity">

    <TextView
        android:id="@+id/header_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back_to_firebase_auth"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@id/user_email"
        />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textSize="16sp"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/verified_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_status"
        android:textSize="16sp"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="16dp">

    <Button
        android:id="@+id/logout"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textSize="16sp"
        />

        <Button
            android:id="@+id/btnVerify"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:textSize="16sp"

            />
    </LinearLayout>




</LinearLayout>
